# perception-pipeline-msgs

./: CMakeLists.txt  package.xml
msg/: ActorRelation.msg  CamInfo.msg  Detection2D.msg  ImageBatch.msg  ImgDetections.msg  Observation.msg  PersonEmotion.msg  PersonGesture.msg  PersonState.msg  RobotState.msg  TextPrompt.msg  VLMDetection.msg  VLMMetadata.msg  VLMOutput.msg  VLMOutputs.msg  VLMPrompts.msg
